fix: pre tag overflow

--- a/static/style/inverted-style.css
+++ b/static/style/inverted-style.css
@@ -519,7 +519,7 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 16px;
     background-color: #7f7f7f20;
   }
